--- a/index.html
+++ b/index.html
@@ -4,37 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piano - Online</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <header>
         <img class="logo"
-        src="#"
+        src="./imgcris/logo_notanota.png" 
         alt="#">
+        <p> Nota a Nota</p>
         <menu>
-            <ul>
-                <li><a href="#">Cursos</a></li>
-                <li><a href="#">Metodología</a></li>
-                <li><a href="#">Sobre nosotros</a></li>
-            </ul>
+            <nav>
+                <a href="#">Cursos</a>
+                <a href="#">Metodología</a>
+                <a href="#">Sobre nosotros</a>
+            </nav>
         </menu>
-        <!-- */clase para poner la foto del banner/* -->
-        <h1>Clases de música para niños online</h1>
-        <p>Acerca la música a los más pequeños de la familia de forma fácil y divertida </p>
-        <button class="cta-header">Sobre nuestra metodología</button>
     </header>
 
     <main>
+                <!-- */clase para poner la foto del banner/* -->
+        <div class="header">
+            <h1>Clases de música para niños online</h1>
+            <p>Acerca la música a los más pequeños de la familia de forma fácil y divertida</p>
+            <button class="cta-header">Sobre nuestra metodología</button >
+        </div>
+        <h2>Elige qué instrumento tocar online</h2>
         <div class="choose-instrument-block">
-            <h2>Elige qué instrumento tocar online</h2>
-            <h3 class="piano-class-btn">clases de piano</h3>
-            <p>aprende a tocar el piano</p>
-            <img src="piano" alt="tocar el piano" />
-            <h3 class="guitar-class-btn">clases de guitarra</h3>
-            <p>aprende a tocar el guitarra</p>
-            <img src="guitar" alt="tocar la guitarra" />
-            <h3 class="flute-class-btn">clases de flauta</h3>
-            <p>aprende a tocar el flauta</p>
-            <img src="flute" alt="tocar la flauta" />
+            <div class="piano-class-btn">
+                <img src="imgcris/dibujo-piano.png" alt="tocar el piano" />
+                <h3> Clases de piano</h3>
+                <p>aprende a tocar el piano</p>
+            </div>
+            <div class="guitar-class-btn">
+                <img src="imgcris/dibujo-guitarra.png" alt="tocar la guitarra" />
+                <h3> Clases de guitarra</h3>
+                <p>aprende a tocar la guitarra</p>
+            </div>
+            <div class="flute-class-btn">
+                <img src="imgcris/dibujo-flauta.png" alt="tocar la flauta" />
+                <h3> Clases de flauta</h3>
+                <p>aprende a tocar la flauta</p>
+            </div>
+            
         </div>
         <div class="contact-form-block">
              <h2>Crear una cuenta</h2>
