arreglos body en css y html

--- a/index_inicio.html
+++ b/index_inicio.html
@@ -24,10 +24,18 @@
     <main>
                 <!-- */clase para poner la foto del banner/* -->
         <div class="header">
-            <h1>Clases de música para niños online</h1>
-            <p>Acerca la música a los más pequeños de la familia de forma fácil y divertida</p>
-            <button class="cta-header">Sobre nuestra metodología</button >
+            <div class="banner">
+                <img src="imgcris/banner.png" alt="tocar el piano"/>
+            </div>
+            <div class="texto-banner">
+                <h1>Clases de música para niños online</h1>
+                <p>Acerca la música a los más pequeños de la familia de forma fácil y divertida</p>
+                <button class="cta-header">Sobre nuestra metodología</button>
+            </div>
+
+
         </div>
+        <div class="h2">
         <h2>Elige qué instrumento tocar online</h2>
         <div class="choose-instrument-block">
             <div class="piano-class-btn">
@@ -51,10 +59,11 @@
              <h2>Crear una cuenta</h2>
              <p>Al crear una cuenta podrás acceder a contenidos personalizados dependiendo de tus necesidades. </p>
             <div class="contact-form">
-                <p class="name">Nombre</p>
-                <input class="input-name">tu nombre</input>
-                <p class="email">Email</p>
-                <input class="input-mail">test@gmail.com</input>
+                <div class="name-email">
+                    <p class="nombre">Nombre</p>
+                    <input type="text" placeholder= "tu nombre"/>
+                    <p class="Email">Email</p><input type="text" placeholder="test@gmail.com"/>
+                </div>
                 <select class="rol">Rol
                     <option value="parents">Padre/madre</option>
                     <option value="school">Escuela</option>
