mejoras pagina inicio

--- a/index_inicio.html
+++ b/index_inicio.html
@@ -8,18 +8,17 @@
 </head>
 <body>
     <header>
-        <img class="logo"
-        src="./imgcris/logo_notanota.png" 
-        alt="#">
-        <p> Nota a Nota</p>
-        <menu>
-            <nav>
-                <a href="#">Cursos</a>
-                <a href="#">Metodología</a>
-                <a href="#">Sobre nosotros</a>
-            </nav>
-        </menu>
+        <div class="logo-container">
+            <img class="logo" src="./imgcris/logo_notanota.png" alt="#">
+            <p class="Nombre-web">Nota a Nota</p>
+        </div>
+        <nav class="menu">
+            <a href="#">Cursos</a>
+            <a href="#">Metodología</a>
+            <a href="#">Sobre nosotros</a>
+        </nav>
     </header>
+    
 
     <main>
         <div class="header">
