funciones teclado y notas finalizado

--- a/piano.html
+++ b/piano.html
@@ -44,33 +44,33 @@
 
             <section class="piano-notes">
                 <section class="octava inferior">
-                    <div class="key white-note do-key rounded-border border-bottom" data-note="do2"><span class="keyboard-key"></span></div>
-                    <div class="key black-note do#-key rounded-border border-bottom" data-note="do#2"><span class="keyboard-key"></span></div>
-                    <div class="key white-note re-key rounded-border border-bottom" data-note="re2"><span class="keyboard-key"></span></div>
-                    <div class="key black-note re#-key rounded-border border-bottom" data-note="re#2"><span class="keyboard-key"></span></div>
-                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi2"><span class="keyboard-key"></span></div>
-                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa2"><span class="keyboard-key"></span></div>
-                    <div class="key black-note fa#-key rounded-border border-bottom" data-note="fa#2"><span class="keyboard-key"></span></div>
-                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol2"><span class="keyboard-key"></span></div>
-                    <div class="key black-note sol#-key rounded-border border-bottom" data-note="sol#2"><span class="keyboard-key"></span></div>
-                    <div class="key white-note la-key rounded-border border-bottom" data-note="la2"><span class="keyboard-key"></span></div>
-                    <div class="key black-note la#-key rounded-border border-bottom" data-note="la#2"><span class="keyboard-key"></span></div>
-                    <div class="key white-note si-key rounded-border border-bottom" data-note="si2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note do-key rounded-border border-bottom" data-key="A" data-note="do2"><span class="keyboard-key"></span></div>
+                    <div class="key black-note do#-key rounded-border border-bottom" data-key="B" data-note="do#2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note re-key rounded-border border-bottom" data-key="C" data-note="re2"><span class="keyboard-key"></span></div>
+                    <div class="key black-note re#-key rounded-border border-bottom" data-key="D" data-note="re#2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note mi-key rounded-border border-bottom" data-key="E" data-note="mi2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note fa-key rounded-border border-bottom" data-key="F" data-note="fa2"><span class="keyboard-key"></span></div>
+                    <div class="key black-note fa#-key rounded-border border-bottom" data-key="G" data-note="fa#2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note sol-key rounded-border border-bottom" data-key="H" data-note="sol2"><span class="keyboard-key"></span></div>
+                    <div class="key black-note sol#-key rounded-border border-bottom" data-key="I" data-note="sol#2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note la-key rounded-border border-bottom" data-key="J" data-note="la2"><span class="keyboard-key"></span></div>
+                    <div class="key black-note la#-key rounded-border border-bottom" data-key="K" data-note="la#2"><span class="keyboard-key"></span></div>
+                    <div class="key white-note si-key rounded-border border-bottom" data-key="L" data-note="si2"><span class="keyboard-key"></span></div>
                 </section>
     
                 <section class="octava central">
-                    <div class="key white-note do-key rounded-border border-bottom" data-note="do4"><span class="keyboard-key"></span></div>
-                    <div class="key black-note do#-key rounded-border border-bottom" data-note="do#4"><span class="keyboard-key"></span></div>
-                    <div class="key white-note re-key rounded-border border-bottom" data-note="re4"><span class="keyboard-key"></span></div>
-                    <div class="key black-note re#-key rounded-border border-bottom" data-note="re#4"><span class="keyboard-key"></span></div>
-                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi4"><span class="keyboard-key"></span></div>
-                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa4"><span class="keyboard-key"></span></div>
-                    <div class="key black-note fa#-key rounded-border border-bottom" data-note="fa#4"><span class="keyboard-key"></span></div>
-                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol4"><span class="keyboard-key"></span></div>
-                    <div class="key black-note sol#-key rounded-border border-bottom" data-note="sol#4"><span class="keyboard-key"></span></div>
-                    <div class="key white-note la-key rounded-border border-bottom" data-note="la4"><span class="keyboard-key"></span></div>
-                    <div class="key black-note la#-key rounded-border border-bottom" data-note="la#4"><span class="keyboard-key"></span></div>
-                    <div class="key white-note si-key rounded-border border-bottom" data-note="si4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note do-key rounded-border border-bottom" data-key="M" data-note="do4"><span class="keyboard-key"></span></div>
+                    <div class="key black-note do#-key rounded-border border-bottom" data-key="N" data-note="do#4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note re-key rounded-border border-bottom"  data-key="Ñ" data-note="re4"><span class="keyboard-key"></span></div>
+                    <div class="key black-note re#-key rounded-border border-bottom"  data-key="O" data-note="re#4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note mi-key rounded-border border-bottom"  data-key="P" data-note="mi4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note fa-key rounded-border border-bottom"  data-key="Q" data-note="fa4"><span class="keyboard-key"></span></div>
+                    <div class="key black-note fa#-key rounded-border border-bottom"  data-key="R" data-note="fa#4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note sol-key rounded-border border-bottom"  data-key="S" data-note="sol4"><span class="keyboard-key"></span></div>
+                    <div class="key black-note sol#-key rounded-border border-bottom" data-key="U" data-note="sol#4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note la-key rounded-border border-bottom"  data-key="V" data-note="la4"><span class="keyboard-key"></span></div>
+                    <div class="key black-note la#-key rounded-border border-bottom" data-key="W" data-note="la#4"><span class="keyboard-key"></span></div>
+                    <div class="key white-note si-key rounded-border border-bottom" data-key="X" data-note="si4"><span class="keyboard-key"></span></div>
                 </section>
             </section>
         </section>
