Cambios de tamaño y nombre de notas

--- a/piano.html
+++ b/piano.html
@@ -44,48 +44,48 @@
             <section class="piano-notes">
                 <section class="octava inferior">
                     <div class="key white-note do-key rounded-border border-bottom" data-note="do2"></div>
-                    <div class="key black-note do#-key rounded-border border-bottom" data-note="do#2"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="reb2"></div>
                     <div class="key white-note re-key rounded-border border-bottom" data-note="re2"></div>
-                    <div class="key black-note re#-key rounded-border border-bottom" data-note="re#2"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="mib2"></div>
                     <div class="key white-note mi-key rounded-border border-bottom" data-note="mi2"></div>
                     <div class="key white-note fa-key rounded-border border-bottom" data-note="fa2"></div>
-                    <div class="key black-note fa#-key rounded-border border-bottom" data-note="fa#2"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="solb2"></div>
                     <div class="key white-note sol-key rounded-border border-bottom" data-note="sol2"></div>
-                    <div class="key black-note sol#-key rounded-border border-bottom" data-note="sol#2"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="lab2"></div>
                     <div class="key white-note la-key rounded-border border-bottom" data-note="la2"></div>
-                    <div class="key black-note la#-key rounded-border border-bottom" data-note="la#2"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="sib2"></div>
                     <div class="key white-note si-key rounded-border border-bottom" data-note="si2"></div>
                 </section>
     
                 <section class="octava central">
-                    <div class="key white-note do-key rounded-border border-bottom" data-note="do4"></div>
-                    <div class="key black-note do#-key rounded-border border-bottom" data-note="do#4"></div>
-                    <div class="key white-note re-key rounded-border border-bottom" data-note="re4"></div>
-                    <div class="key black-note re#-key rounded-border border-bottom" data-note="re#4"></div>
-                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi4"></div>
-                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa4"></div>
-                    <div class="key black-note fa#-key rounded-border border-bottom" data-note="fa#4"></div>
-                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol4"></div>
-                    <div class="key black-note sol#-key rounded-border border-bottom" data-note="sol#4"></div>
-                    <div class="key white-note la-key rounded-border border-bottom" data-note="la4"></div>
-                    <div class="key black-note la#-key rounded-border border-bottom" data-note="la#4"></div>
-                    <div class="key white-note si-key rounded-border border-bottom" data-note="si4"></div>
+                    <div class="key white-note do-key rounded-border border-bottom" data-note="do3"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="reb3"></div>
+                    <div class="key white-note re-key rounded-border border-bottom" data-note="re3"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="mib3"></div>
+                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi3"></div>
+                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa3"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="solb3"></div>
+                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol3"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="lab3"></div>
+                    <div class="key white-note la-key rounded-border border-bottom" data-note="la3"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="sib3"></div>
+                    <div class="key white-note si-key rounded-border border-bottom" data-note="si3"></div>
                 </section>
     
-                <!-- <section class="octava superior">
-                    <div class="white-note do-key rounded-border"></div>
-                    <div class="black-note do#-key rounded-border"></div>
-                    <div class="white-note re-key rounded-border"></div>
-                    <div class="black-note re#-key rounded-border"></div>
-                    <div class="white-note mi-key rounded-border"></div>
-                    <div class="white-note fa-key rounded-border"></div>
-                    <div class="black-note fa#-key rounded-border"></div>
-                    <div class="white-note sol-key rounded-border"></div>
-                    <div class="black-note sol#-key rounded-border"></div>
-                    <div class="white-note la-key rounded-border"></div>
-                    <div class="black-note la#-key rounded-border"></div>
-                    <div class="white-note si-key rounded-border"></div>
-                </section> -->
+                <section class="octava superior">
+                    <div class="key white-note do-key rounded-border border-bottom" data-note="do4"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="reb4"></div>
+                    <div class="key white-note re-key rounded-border border-bottom" data-note="re4"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="mib4"></div>
+                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi4"></div>
+                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa4"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="solb4"></div>
+                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol4"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="lab4"></div>
+                    <div class="key white-note la-key rounded-border border-bottom" data-note="la4"></div>
+                    <div class="key black-note rounded-border border-bottom" data-note="sib4"></div>
+                    <div class="key white-note si-key rounded-border border-bottom" data-note="si4"></div>
+                </section>
             </section>
         </section>
 
@@ -102,8 +102,6 @@
     <footer></footer>
 
     <script src="./js/script.js"></script>
-    <script src="./js/script-cris.js"></script>
-
 </body>
 
 </html>
