Cambios de tamaño, centrar el piano y clamp

--- a/piano.html
+++ b/piano.html
@@ -10,28 +10,22 @@
 </head>
 
 <body>
-    <header></header>
-
     <main>
         <div class="title-piano darkblue-bg rounded-border"><h2 class="font-graduate">Piano</h2></div>
 
         <section class="piano">
             <section class="piano-btns">
                 <div class="key-help rounded-border">
-                    <button class="keyboard">⌨️</button>
-                    <button class="solfeo">🎵</button>
+                    <p class="keyboard">⌨️</p>
+                    <p class="solfeo">🎵</p>
                 </div>
     
                 <div class="inst-play">
-                    <div class="instruccions purple-bg rounded-border">
-                        <button class="rounded-border darkblue-bg">
-                            <p class="font-graduate">instrucciones</p>
-                        </button>
+                    <div class="inst purple-bg rounded-border">
+                            <p class="rounded-border darkblue-bg font-graduate">instrucciones</p>
                     </div>
                     <div class="play purple-bg rounded-border">
-                        <button class="rounded-border magenta-bg">
-                            <p class="font-graduate">jugar</p>
-                        </button>
+                            <p class="rounded-border magenta-bg font-graduate">jugar</p>
                     </div>
                 </div>
     
@@ -89,17 +83,15 @@
             </section>
         </section>
 
-        <section class="piano-intro">
+        <!-- <section class="piano-intro">
             <h2><p>Piano online para niños</p></h2>
             <p>Es importante que tanto en el colegio como en casa, los más peques se acerquen a la música de distintas formas. 
             <br>En nuestra escuela Nota a nota acompañamos a los estudiantes en sus primeros pasos a la hora de aprender un instrumento.</p>
 
             <h2><p>Inscríbete en nuestra escuela de piano online</p></h2>
             <p>Si te gusta nuestro piano gratuito, ¡espera a ver nuestros cursos online de piano!. Accede a la escuela online donde encontrarás cursos divididos por niveles e instrumentos, donde pedagogos expertos en música enseñarán a los más pequeños a tocar un instrumento desde cero.</p>
-        </section>
+        </section> -->
     </main>
-
-    <footer></footer>
 
     <script src="./js/script.js"></script>
 </body>
