probando cambios para el js de inicio

--- a/index_inicio.html
+++ b/index_inicio.html
@@ -35,7 +35,7 @@
             <h2>   Elige qué instrumento tocar online</h2>
         </div>
         <div class="choose-instrument-block">
-            <div class="piano-class-btn">
+            <div id="piano-class-btn">
                 <img src="imgcris/dibujo-piano.png" alt="tocar el piano" />
                 <h3> Clases de piano</h3>
                 <p>aprende a tocar el piano</p>
@@ -107,5 +107,7 @@
             <p>Genta Mateo Kamekawa & Cristina Romero</p>
         </div>
     </footer>
+    <script src="./js/script.js"></script>
+
 </body>
 </html
