--- a/index_inicio.html
+++ b/index_inicio.html
@@ -32,7 +32,7 @@
             </div>
         </div>
         <div class="elige-instrumento">
-            <h2>   Elige qué instrumento tocar online</h2>
+            <h2>Elige qué instrumento quieres tocar</h2>
         </div>
         <div class="choose-instrument-block">
             <div id="piano-class-btn">
@@ -40,12 +40,12 @@
                 <h3> Clases de piano</h3>
                 <p>aprende a tocar el piano</p>
             </div>
-            <div class="guitar-class-btn">
+            <div id="guitar-class-btn">
                 <img src="imgcris/dibujo-guitarra.png" alt="tocar la guitarra" />
                 <h3> Clases de guitarra</h3>
                 <p>aprende a tocar la guitarra</p>
             </div>
-            <div class="flute-class-btn">
+            <div id="flute-class-btn">
                 <img src="imgcris/dibujo-flauta.png" alt="tocar la flauta" />
                 <h3> Clases de flauta</h3>
                 <p>aprende a tocar la flauta</p>
@@ -53,7 +53,7 @@
         </div>
             
         <div class="contact-form-block">
-            <h2>   Crear una cuenta</h2>
+            <h2> Crear una cuenta</h2>
             <p>Al crear una cuenta podrás acceder a contenidos personalizados dependiendo de tus necesidades. </p>
        
             <div class="rectangulo">
@@ -89,7 +89,7 @@
             </div>
         </div>
         <div class="cursos-online">
-            <h2>Cursos online</h2>
+            <h2>Cursos de música gratuitos</h2>
             <p>Descubre nuestro canal de youtube con las clases musicales desde cero orientadas a niños. </p>
          <div class="videos-cursos">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UCQeWqNSLVE?si=gZ-9Gam2jYZuCFzf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -107,7 +107,7 @@
             <p>Genta Mateo Kamekawa & Cristina Romero</p>
         </div>
     </footer>
-    <script src="./js/script.js"></script>
+    <script src="./script.js"></script>
 
 </body>
 </html
