landing inicio terminada

--- a/index_inicio.html
+++ b/index_inicio.html
@@ -36,9 +36,11 @@
         </div>
         <div class="choose-instrument-block">
             <div id="piano-class-btn">
+                <a href="./piano.html">
                 <img src="imgcris/dibujo-piano.png" alt="tocar el piano" />
                 <h3> Clases de piano</h3>
                 <p>aprende a tocar el piano</p>
+                </a>
             </div>
             <div id="guitar-class-btn">
                 <img src="imgcris/dibujo-guitarra.png" alt="tocar la guitarra" />
