Añadir header, footer y css de la landing de inicio

--- a/piano.html
+++ b/piano.html
@@ -6,10 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nota a nota - Piano</title>
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style_inicio.css">
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
 </head>
 
 <body>
+    <header>
+        <div class="logo-container">
+            <img class="logo" src="./imgcris/logo_notanota.png" alt="#">
+            <p class="Nombre-web">Nota a Nota</p>
+        </div>
+        <nav class="menu">
+            <a href="#">Cursos</a>
+            <a href="#">Metodología</a>
+            <a href="#">Sobre nosotros</a>
+        </nav>
+    </header>
+
     <main>
         <div class="title-piano darkblue-bg rounded-border"><h2 class="font-graduate">Piano</h2></div>
 
@@ -92,6 +105,16 @@
             <p>Si te gusta nuestro piano gratuito, ¡espera a ver nuestros cursos online de piano!. Accede a la escuela online donde encontrarás cursos divididos por niveles e instrumentos, donde pedagogos expertos en música enseñarán a los más pequeños a tocar un instrumento desde cero.</p>
         </section> -->
     </main>
+
+    <footer>
+        <div class="footer-column-left">
+            <a href="#">Contacta con nosotros</a>
+            <a href="#">Política de privacidad</a>
+        </div>
+        <div class="footer-column-right">
+            <p>Genta Mateo Kamekawa & Cristina Romero</p>
+        </div>
+    </footer>
 
     <script src="./js/script.js"></script>
 </body>
