Añadir función de teclado (Octava central)

--- a/piano.html
+++ b/piano.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nota a nota - Piano</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style_piano.css">
     <link rel="stylesheet" href="./css/style_inicio.css">
     <link href='https://fonts.googleapis.com/css?family=Graduate' rel='stylesheet'>
 </head>
@@ -51,59 +51,59 @@
             <section class="piano-notes">
                 <section class="octava inferior">
                     <div class="key white-note do-key rounded-border border-bottom" data-note="do2"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="reb2"></div>
+                    <div class="key black-note reb-key rounded-border border-bottom" data-note="reb2"></div>
                     <div class="key white-note re-key rounded-border border-bottom" data-note="re2"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="mib2"></div>
+                    <div class="key black-note mib-key rounded-border border-bottom" data-note="mib2"></div>
                     <div class="key white-note mi-key rounded-border border-bottom" data-note="mi2"></div>
                     <div class="key white-note fa-key rounded-border border-bottom" data-note="fa2"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="solb2"></div>
+                    <div class="key black-note solb-key rounded-border border-bottom" data-note="solb2"></div>
                     <div class="key white-note sol-key rounded-border border-bottom" data-note="sol2"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="lab2"></div>
+                    <div class="key black-note lab-key rounded-border border-bottom" data-note="lab2"></div>
                     <div class="key white-note la-key rounded-border border-bottom" data-note="la2"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="sib2"></div>
+                    <div class="key black-note sib-key rounded-border border-bottom" data-note="sib2"></div>
                     <div class="key white-note si-key rounded-border border-bottom" data-note="si2"></div>
                 </section>
     
                 <section class="octava central">
-                    <div class="key white-note do-key rounded-border border-bottom" data-note="do3"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="reb3"></div>
-                    <div class="key white-note re-key rounded-border border-bottom" data-note="re3"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="mib3"></div>
-                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi3"></div>
-                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa3"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="solb3"></div>
-                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol3"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="lab3"></div>
-                    <div class="key white-note la-key rounded-border border-bottom" data-note="la3"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="sib3"></div>
-                    <div class="key white-note si-key rounded-border border-bottom" data-note="si3"></div>
+                    <div class="key white-note do-key rounded-border border-bottom" data-note="do3" data-key="65"></div>
+                    <div class="key black-note reb-key rounded-border border-bottom" data-note="reb3" data-key="87"></div>
+                    <div class="key white-note re-key rounded-border border-bottom" data-note="re3" data-key="83"></div>
+                    <div class="key black-note mib-key rounded-border border-bottom" data-note="mib3" data-key="69"></div>
+                    <div class="key white-note mi-key rounded-border border-bottom" data-note="mi3" data-key="68"></div>
+                    <div class="key white-note fa-key rounded-border border-bottom" data-note="fa3" data-key="70"></div>
+                    <div class="key black-note solb-key rounded-border border-bottom" data-note="solb3" data-key="84"></div>
+                    <div class="key white-note sol-key rounded-border border-bottom" data-note="sol3" data-key="71"></div>
+                    <div class="key black-note lab-key rounded-border border-bottom" data-note="lab3" data-key="89"></div>
+                    <div class="key white-note la-key rounded-border border-bottom" data-note="la3" data-key="72"></div>
+                    <div class="key black-note sib-key rounded-border border-bottom" data-note="sib3" data-key="85"></div>
+                    <div class="key white-note si-key rounded-border border-bottom" data-note="si3" data-key="74"></div>
                 </section>
     
                 <section class="octava superior">
                     <div class="key white-note do-key rounded-border border-bottom" data-note="do4"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="reb4"></div>
+                    <div class="key black-note reb-key rounded-border border-bottom" data-note="reb4"></div>
                     <div class="key white-note re-key rounded-border border-bottom" data-note="re4"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="mib4"></div>
+                    <div class="key black-note mib-key rounded-border border-bottom" data-note="mib4"></div>
                     <div class="key white-note mi-key rounded-border border-bottom" data-note="mi4"></div>
                     <div class="key white-note fa-key rounded-border border-bottom" data-note="fa4"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="solb4"></div>
+                    <div class="key black-note solb-key rounded-border border-bottom" data-note="solb4"></div>
                     <div class="key white-note sol-key rounded-border border-bottom" data-note="sol4"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="lab4"></div>
+                    <div class="key black-note lab-key rounded-border border-bottom" data-note="lab4"></div>
                     <div class="key white-note la-key rounded-border border-bottom" data-note="la4"></div>
-                    <div class="key black-note rounded-border border-bottom" data-note="sib4"></div>
+                    <div class="key black-note sib-key rounded-border border-bottom" data-note="sib4"></div>
                     <div class="key white-note si-key rounded-border border-bottom" data-note="si4"></div>
                 </section>
             </section>
         </section>
 
-        <!-- <section class="piano-intro">
+        <section class="piano-intro">
             <h2><p>Piano online para niños</p></h2>
             <p>Es importante que tanto en el colegio como en casa, los más peques se acerquen a la música de distintas formas. 
             <br>En nuestra escuela Nota a nota acompañamos a los estudiantes en sus primeros pasos a la hora de aprender un instrumento.</p>
 
             <h2><p>Inscríbete en nuestra escuela de piano online</p></h2>
             <p>Si te gusta nuestro piano gratuito, ¡espera a ver nuestros cursos online de piano!. Accede a la escuela online donde encontrarás cursos divididos por niveles e instrumentos, donde pedagogos expertos en música enseñarán a los más pequeños a tocar un instrumento desde cero.</p>
-        </section> -->
+        </section>
     </main>
 
     <footer>
@@ -116,7 +116,7 @@
         </div>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/script-mateo.js"></script>
 </body>
 
 </html>
