icono info amarillo

--- a/piano.html
+++ b/piano.html
@@ -36,7 +36,7 @@
                 </div>
             
                 <div class="char-box purple-bg rounded-border">
-                    <img src="" alt="character">
+                    <img src="informacion.png" alt="character">
                     <div id="char-text" class="char-text darkblue-bg rounded-border">
                         <p class="font-graduate">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                     </div>
